[package]
name = "piano"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
hyperware_process_lib = { version = "1.0.3", features = ["logging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.24.0"
dartfrog_lib = { path = "../../dartfrog_lib" }
[features]
prod = []

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
